Cleaned up code, fixed hamburger menu on mobile devices

--- a/style.css
+++ b/style.css
@@ -961,11 +961,6 @@ margin-bottom: 5rem; /* flexible spacing (5 × root font size) */}
 /* Mobile styles */
 @media (max-width: 768px) {
   .menu-toggle {
-    /* display: block;
-    color: yellow;
-    font-size: 1.8rem;
-    cursor: pointer;
-    padding: 10px; */
      position: absolute;
     right: 16px;
     top: 50%;
